--- a/templates/create_chef_at.html
+++ b/templates/create_chef_at.html
@@ -1,9 +1,7 @@
 {% load static %}
-<!DOCTYPE html>
+<! DOCTYPE html>
 <html lang="en">
-
 <head>
-
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -14,8 +12,7 @@
 
     <!-- Custom fonts for this template-->
     <link href="{% static 'vendor/fontawesome-free/css/all.min.css'%}" rel="stylesheet" type="text/css">
-    <link
-        href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
+<link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
         rel="stylesheet">
 
     <!-- Custom styles for this template-->
@@ -23,7 +20,6 @@
     <link rel="shortcut icon" href="{% static 'img/favicon.ico' type='image/x-icon' %}">
 
 </head>
-
 <body class="bg-gradient-primary">
 
 
@@ -31,7 +27,7 @@
 
         <div class="card o-hidden border-0 shadow-lg my-5">
             <div class="card-body p-0">
-                <ul class="nav justify-content-end nav-pills nav-fill"">
+                <ul class="nav justify-content-end nav-pills nav-fill">
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'create_dem' %}">Client</a>
                     </li>
@@ -54,7 +50,7 @@
                                 <h1 class="h4 text-gray-900 font-weight-bold mb-4">Create a manufacturing order</h1>
 
                             </div>
-                            <form class="user">
+                            <form action="" method="GET" class="user">
                                 <div class="form-group row">
 
                                     <div class="col-sm-6">
@@ -93,6 +89,7 @@
                                 </div>
 
                             </div>
+                                                                      {% csrf_token %}
 
                                 <div class="form-group row">
 
