--- a/templates/create_chef_at.html
+++ b/templates/create_chef_at.html
@@ -2,138 +2,187 @@
 <! DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<meta name="description" content="">
+	<meta name="author" content="">
 
-    <title>MO edit workshop</title>
+	<title>add items workshop</title>
 
-    <!-- Custom fonts for this template-->
-    <link href="{% static 'vendor/fontawesome-free/css/all.min.css'%}" rel="stylesheet" type="text/css">
-<link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
-        rel="stylesheet">
+	<!-- Custom fonts for this template-->
+	<link href="{% static 'vendor/fontawesome-free/css/all.min.css'%}" rel="stylesheet" type="text/css">
+	<link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
+	      rel="stylesheet">
 
-    <!-- Custom styles for this template-->
-    <link href="{% static 'css/sb-admin-2.min.css'%}" rel="stylesheet">
-    <link rel="shortcut icon" href="{% static 'img/favicon.ico' type='image/x-icon' %}">
+	<!-- Custom styles for this template-->
+	<link href="{% static 'css/sb-admin-2.min.css'%}" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="{% static 'css/popup.css' %}">
+	<link rel="stylesheet" type="text/css" href="{% static 'css/dynamictable.css' %}">
+	<link rel="shortcut icon" href="{% static 'img/favicon.ico' type='image/x-icon' %}">
 
 </head>
-<body class="bg-gradient-primary">
+<body class="bg-gradient-secondary">
 
 
-    <div class="container">
+<div class="container">
 
-        <div class="card o-hidden border-0 shadow-lg my-5">
-            <div class="card-body p-0">
-                <ul class="nav justify-content-end nav-pills nav-fill">
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'create_dem' %}">Client</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'create_prod' %}">Production Chief</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" href="{% url 'create_at' %}">Workshop Chief</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link disabled" href="#">Disabled</a>
-                    </li>
-                </ul>
-                <!-- Nested Row within Card Body -->
-                <div >
-
-                    <div >
-                        <div class="p-5">
-                            <div class="text-center">
-                                <h1 class="h4 text-gray-900 font-weight-bold mb-4">Create a manufacturing order</h1>
-
-                            </div>
-                            <form action="" method="GET" class="user">
-                                <div class="form-group row">
-
-                                    <div class="col-sm-6">
-                                        <label class=" h5 font-weight-bold" >Manufacturing Order</label>
-                                        <h1 class="h5 text-gray-900 mb-4"> MO/{{OFId}} </h1>
-                                    </div>
-                                </div>
-                                <div class="form-group row">
-                                    <div class="col-sm-6 mb-3 mb-sm-0">
-                                        <label for="ref">Raw material:</label>
-                                        <input type="text"  class="form-control form-control-user" id="ref" placeholder="Reference">
-                                    </div>
-                                </div>
-                            <div class="container">
-                                <div class="form-group row">
-                                Dimension:
-                                </div>
-                                <div class="form-group row">
+	<div class="card o-hidden border-0 shadow-lg my-5">
+		<div class="card-body p-0">
+			<ul class="nav justify-content-end nav-pills nav-fill">
+				<li class="nav-item">
+					<a class="nav-link" href="{% url 'create_dem' %}"><img src="{% static 'img/developer.svg'%}"
+					                                                       width="30" height="30" alt="">Technical
+						department</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link active" href="{% url 'create_at' %}">Workshop Chief</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="{% url 'create_prod' %}">Production Manager</a>
+				</li>
 
 
-                                        <div class="col-sm">
-                                            <label for="len">Length:</label>
-                                            <input type="text" class="form-control form-control-user" id="len" placeholder="Length">
-                                        </div>
+			</ul>
+			<!-- Nested Row within Card Body -->
+			<div>
 
-                                        <div class="col-sm">
-                                            <label for="wid">Width:</label>
-                                            <input type="text" class="form-control form-control-user" id="wid" placeholder="Width">
-                                        </div>
+				<div>
+					<div class="p-5">
+						<div class="text-center">
+							<h1 class="h4 text-gray-900 font-weight-bold mb-4">Add items to manufacturing order</h1>
+						</div>
+						<div>
+							<div class="col-sm-6">
+								<label class=" h5 font-weight-bold">Manufacturing Order</label>
+								<h1 class="h5 text-gray-900 mb-4"> MO/{{OFId}} </h1>
+							</div>
+						</div>
+						<div class="table-responsive">
+							<table class="test table table-sm">
+								<thead>
+								<tr>
+									<th scope="col">Index</th>
+									<th scope="col">Product ID</th>
+									<th scope="col">Designation</th>
+									<th scope="col">Quantity</th>
+									<th scope="col"></th>
+								</tr>
+								</thead>
+								<tbody class="detail">
+								<tr>
+									<td></td>
+									<td>{{ref}}</td>
+									<td>{{desig}}</td>
+									<td>{{qty}}</td>
+									<td><a class="btn btn-outline-primary" href="#" id="add">Add details</a></td>
+								</tr>
 
-                                        <div class="col-sm">
-                                            <label for="thick">Thickness:</label>
-                                            <input type="text" class="form-control form-control-user" id="thick" placeholder="Thickness">
-                                        </div>
+								</tbody>
+							</table>
+						</div>
+						<div class="row">
+							<div class="col text-right col-sm-6">
+								<button class="btn btn-success btn-icon-split btn-block" type="submit" value="Submit"
+								        style="width:30%">Edit
+								</button>
+							</div>
+							<div class="col text-left col-sm-6">
+								<button class="btn btn-dark btn-icon-split  btn-block" type="submit" value="Submit"
+								        style="width:30%">Cancel
+								</button>
+							</div>
+						</div>
 
-                                </div>
-
-                            </div>
-                                                                      {% csrf_token %}
-
-                                <div class="form-group row">
-
-                                  <label for="qty">Scheduled hours</label>
-                                        <input type="number" min="0" class="form-control form-control-user" id="qty"
-                                            placeholder="Scheduled hours">
-
-                                    </div>
-
-
-
-                                <div class="row">
-                                    <div class="col text-center">
-                                    <button class="btn btn-success btn-icon-split btn-lg" type="submit" value="Submit" style="width:30%">Create</button>
-                                    </div>
-                                </div>
-                              <!--  <a href="index.html" class="btn btn-primary btn-user btn-block">
-                                    Create
-                                </a> -->
-
-                                <hr>
-
-                            </form>
+						<div class="bg-modal">
+							<div class="modal-content">
+								<div class="close">+</div>
+								{% csrf_token %}
+								<form action='test1' method="POST" id="itemm">
+									<div class="form-group row">
+										<div class="form-group row">
+											<div class="col-sm-6 mb-3 mb-sm-0">
+												<label for="ref">Raw material:</label>
+												<input type="text" class="form-control form-control-user" id="ref"
+												       placeholder="Reference">
+											</div>
+										</div>
+										<div class="container">
+											<div class="form-group row">
+												Dimension:
+											</div>
+											<div class="form-group row">
 
 
+												<div class="col-sm">
+													<label for="len">Length:</label>
+													<input type="text" class="form-control form-control-user" id="len"
+													       placeholder="Length">
+												</div>
 
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+												<div class="col-sm">
+													<label for="wid">Width:</label>
+													<input type="text" class="form-control form-control-user" id="wid"
+													       placeholder="Width">
+												</div>
 
-    </div>
+												<div class="col-sm">
+													<label for="thick">Thickness:</label>
+													<input type="text" class="form-control form-control-user" id="thick"
+													       placeholder="Thickness">
+												</div>
 
-    <!-- Bootstrap core JavaScript-->
-    <script src="{% static 'vendor/jquery/jquery.min.js'%}"></script>
-    <script src="{% static 'vendor/bootstrap/js/bootstrap.bundle.min.js'%}"></script>
+											</div>
 
-    <!-- Core plugin JavaScript-->
-    <script src="{% static 'vendor/jquery-easing/jquery.easing.min.js'%}"></script>
+										</div>
+										{% csrf_token %}
 
-    <!-- Custom scripts for all pages-->
-    <script src="{% static 'js/sb-admin-2.min.js'%}"></script>
+										<div class="form-group row">
 
-</body>
+											<label for="qty">Scheduled hours</label>
+											<input type="number" min="0" class="form-control form-control-user" id="qty"
+											       placeholder="Scheduled hours">
+
+										</div>
+
+
+										<div class="row">
+											<div class="col text-center">
+												<button class="btn btn-success btn-icon-split btn-lg" type="submit"
+												        value="Submit"
+												        style="width:30%">Create
+												</button>
+											</div>
+										</div>
+										<!--  <a href="index.html" class="btn btn-primary btn-user btn-block">
+											  Create
+										  </a> -->
+
+										<hr>
+									</div>
+								</form>
+
+
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+
+		</div>
+
+		<!-- Bootstrap core JavaScript-->
+		<script src="{% static 'vendor/jquery/jquery.min.js'%}"></script>
+		<script src="{% static 'vendor/bootstrap/js/bootstrap.bundle.min.js'%}"></script>
+
+		<!-- Core plugin JavaScript-->
+		<script src="{% static 'vendor/jquery-easing/jquery.easing.min.js'%}"></script>
+
+		<!-- Custom scripts for all pages-->
+		<script src="{% static 'js/sb-admin-2.min.js'%}"></script>
+		<script src="{% static 'js/popupform.js'%}"></script>
+		<script src="{% static 'js/dynamictable.js'%}"></script>
+		<script src="{% static 'js/notnullwarning.js'%}"></script>
+		<script src="{% static 'https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js'%}"></script></div></body>
 
 </html>
