--- a/templates/create_resp_prod.html
+++ b/templates/create_resp_prod.html
@@ -4,217 +4,136 @@
 
 <head>
 
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
-        <style>
-    	* { font: 17px Calibri; }
-        table { width: 60%; }
-        table, th, td { border: solid 2px #DDD;
-            border-collapse: collapse; padding: 3px 3px; text-align: center;
-        }
-    </style>
-    <title>MO edit production</title>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<meta name="description" content="">
+	<meta name="author" content="">
 
-    <!-- Custom fonts for this template-->
-    <link href="{% static 'vendor/fontawesome-free/css/all.min.css'%}" rel="stylesheet" type="text/css">
-    <link
-        href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
-        rel="stylesheet">
+	<title>add items tech dep</title>
 
-    <!-- Custom styles for this template-->
-    <link href="{% static 'css/sb-admin-2.min.css'%}" rel="stylesheet">
+	<!-- Custom fonts for this template-->
+	<link href="{% static 'vendor/fontawesome-free/css/all.min.css'%}" rel="stylesheet" type="text/css">
+	<link
+			href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
+			rel="stylesheet">
+
+	<!-- Custom styles for this template-->
+	<link href="{% static 'css/sb-admin-2.min.css'%}" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="{% static 'css/popup.css' %}">
+	<link rel="stylesheet" type="text/css" href="{% static 'css/dynamictable.css' %}">
+	<link rel="shortcut icon" href="{% static 'img/favicon.ico' type='image/x-icon' %}">
+
 
 </head>
 
-<body onload="createTable()" class="bg-gradient-primary">
+<body onload="createTable()" class="bg-gradient-secondary">
 
-    <div class="container">
+<div class="container">
 
-        <div class="card o-hidden border-0 shadow-lg my-5">
-            <div class="card-body p-0">
-                <!-- Nested Row within Card Body -->
-                       <ul class="nav justify-content-end nav-pills nav-fill">
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'create_dem' %}">Client</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" href="{% url 'create_prod' %}">Production Chief</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'create_at' %}">Workshop Chief</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link disabled" href="#">Disabled</a>
-                    </li>
-                </ul>
-                <div >
+	<div class="card o-hidden border-0 shadow-lg my-5">
+		<div class="card-body p-0">
+			<!-- Nested Row within Card Body -->
+			<ul class="nav justify-content-end nav-pills nav-fill">
+				<li class="nav-item">
+					<a class="nav-link" href="{% url 'create_dem' %}"><img src="{% static 'img/developer.svg'%}" width="30" height="30" alt="">Technical
+						department</a>
+				<li class="nav-item">
+					<a class="nav-link" href="{% url 'create_at' %}">Workshop Chief</a>
+				</li>
 
-                    <div >
-                        <div class="p-5">
-                            <div class="text-center">
-                                <h1 class="h4 text-gray-900 font-weight-bold mb-4">Create a manufacturing order</h1>
+				<li class="nav-item">
+					<a class="nav-link active" href="{% url 'create_prod' %}">Production Manager</a>
+				</li>
 
-                            </div>
-                            <form class="user">
-                                <div class="form-group row">
+			</ul>
+			<div>
 
-                                    <div class="col-sm-6">
-                                        <label class=" h5 font-weight-bold" >Manufacturing Order</label>
-                                        <h1 class="h5 text-gray-900 mb-4"> MO/{{OFId}} </h1>
-                                    </div>
-                                </div>
-                                <div class="form-group row">
-                                    <div class="col-sm-6 mb-3 mb-sm-0">
-                                        <label for="ref">Qualification:</label>
-                                        <input type="text"  class="form-control form-control-user" id="ref" placeholder="Reference">
-                                    </div>
+				<div>
+					<div class="p-5">
+						<div class="text-center">
+							<h1 class="h4 text-gray-900 font-weight-bold mb-4">Add items to manufacturing order</h1>
 
-                                    <div class="col-sm-6">
-                                      <label for="desig">Designation:</label>
-                                        <input type="text" class="form-control form-control-user" id="desig" placeholder="Designation">
-                                    </div>
-                                </div>
+						</div>
+						<form class="user">
+							<div class="form-group row">
 
-                                <div class="form-group row">
+								<div class="col-sm-6">
+									<label class=" h5 font-weight-bold">Manufacturing Order</label>
+									<h1 class="h5 text-gray-900 mb-4"> MO/{{OFId}} </h1>
+								</div>
+							</div>
+							<div class="form-group row">
+								<div class="col-sm-6 mb-3 mb-sm-0">
+									<label for="ref">Qualification:</label>
+									<input type="text" class="form-control form-control-user" id="ref"
+									       placeholder="Reference">
+								</div>
 
-                                  <label for="qty">Product quantity:</label>
-                                        <input type="number" min="0" class="form-control form-control-user" id="qty"
-                                            placeholder="Quantity">
+								<div class="col-sm-6">
+									<label for="desig">Designation:</label>
+									<input type="text" class="form-control form-control-user" id="desig"
+									       placeholder="Designation">
+								</div>
+							</div>
 
-                                    </div>
+							<div class="form-group row">
 
-                                    <p>
-                                    <input class="btn btn-primary btn-icon-split p-2" type="button" id="addRow" value="Add machines" onclick="insertRow()" />
-                                    </p>
+								<label for="qty">Product quantity:</label>
+								<input type="number" min="0" class="form-control form-control-user" id="qty"
+								       placeholder="Quantity">
 
+							</div>
 
-                                    <div id="cont"></div>
-                                <div class="row">
-                                    <div class="col text-center">
-                                    <button class="btn btn-success btn-icon-split btn-lg" type="submit" value="Submit" style="width:30%">Create</button>
-                                    </div>
-                                </div>
-                                    <p id='output'></p>
+							<p>
+								<input class="btn btn-primary btn-icon-split p-2" type="button" id="addRow"
+								       value="Add machines" onclick="insertRow()"/>
+							</p>
 
 
+							<div id="cont"></div>
+							<div class="row">
+								<div class="col text-center">
+									<button class="btn btn-success btn-icon-split btn-lg" type="submit" value="Submit"
+									        style="width:30%">Create
+									</button>
+								</div>
+							</div>
+							<p id='output'></p>
 
-                              <!--  <a href="index.html" class="btn btn-primary btn-user btn-block">
-                                    Create
-                                </a> -->
 
-                                <hr>
+							<!--  <a href="index.html" class="btn btn-primary btn-user btn-block">
+								  Create
+							  </a> -->
 
-                            </form>
+							<hr>
+
+						</form>
 
 
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+</div>
 
-    </div>
+<!-- Bootstrap core JavaScript-->
+<script src="{% static 'vendor/jquery/jquery.min.js'%}"></script>
+<script src="{% static 'vendor/bootstrap/js/bootstrap.bundle.min.js'%}"></script>
 
-    <!-- Bootstrap core JavaScript-->
-    <script src="{% static 'vendor/jquery/jquery.min.js'%}"></script>
-    <script src="{% static 'vendor/bootstrap/js/bootstrap.bundle.min.js'%}"></script>
+<!-- Core plugin JavaScript-->
+<script src="{% static 'vendor/jquery-easing/jquery.easing.min.js'%}"></script>
 
-    <!-- Core plugin JavaScript-->
-    <script src="{% static 'vendor/jquery-easing/jquery.easing.min.js'%}"></script>
-
-    <!-- Custom scripts for all pages-->
-    <script src="{% static 'js/sb-admin-2.min.js'%}"></script>
+<!-- Custom scripts for all pages-->
+<script src="{% static 'js/sb-admin-2.min.js'%}"></script>
+<script src="{% static 'js/popupform.js'%}"></script>
+<script src="{% static 'js/dynamictable.js'%}"></script>
+<script src="{% static 'js/notnullwarning.js'%}"></script>
+<script src="{% static 'https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js'%}"></script>
 
 
 </body>
-<script>
-    var arrHead = new Array();	// array for header.
-    arrHead = ['', 'Qualification', 'Scheduled hours'];
 
-    // first create TABLE structure with the headers.
-    function createTable() {
-        var empTable = document.createElement('table');
-        empTable.setAttribute('id', 'empTable'); // table id.
-
-        var tr = empTable.insertRow(-1);
-        for (var h = 0; h < arrHead.length; h++) {
-            var th = document.createElement('th'); // create table headers
-            th.innerHTML = arrHead[h];
-            tr.appendChild(th);
-        }
-
-        var div = document.getElementById('cont');
-        div.appendChild(empTable);  // add the TABLE to the container.
-    }
-
-    // now, add a new to the TABLE.
-    function insertRow() {
-        var empTab = document.getElementById('empTable');
-
-        var rowCnt = empTab.rows.length;   // table row count.
-        var tr = empTab.insertRow(rowCnt); // the table row.
-        tr = empTab.insertRow(rowCnt);
-
-        for (var c = 0; c < arrHead.length; c++) {
-            var td = document.createElement('td'); // table definition.
-            td = tr.insertCell(c);
-
-            if (c == 0) {      // the first column.
-                // add a button in every new row in the first column.
-                var button = document.createElement('input');
-                button.setAttribute('id','remov');
-                button.setAttribute('class','btn btn-outline-primary');
-
-
-                // set input attributes.
-                button.setAttribute('type', 'button');
-                button.setAttribute('value', 'Remove');
-
-                // add button's 'onclick' event.
-                button.setAttribute('onclick', 'removeRow(this)');
-
-                td.appendChild(button);
-            }
-            else {
-                // 2nd, 3rd and 4th column, will have textbox.
-                var ele = document.createElement('input');
-                ele.setAttribute('type', 'text');
-                ele.setAttribute('value', '');
-
-                td.appendChild(ele);
-            }
-        }
-    }
-
-    // delete TABLE row function.
-    function removeRow(oButton) {
-        var empTab = document.getElementById('empTable');
-        empTab.deleteRow(oButton.parentNode.parentNode.rowIndex); // button -> td -> tr.
-    }
-
-    // function to extract and submit table data.
-    function submit() {
-        var myTab = document.getElementById('empTable');
-        var arrValues = new Array();
-
-        // loop through each row of the table.
-        for (row = 1; row < myTab.rows.length - 1; row++) {
-        	// loop through each cell in a row.
-            for (c = 0; c < myTab.rows[row].cells.length; c++) {
-                var element = myTab.rows.item(row).cells[c];
-                if (element.childNodes[0].getAttribute('type') == 'text') {
-                    arrValues.push("'" + element.childNodes[0].value + "'");
-                }
-            }
-        }
-
-        // The final output.
-        document.getElementById('output').innerHTML = arrValues;
-        //console.log (arrValues);   // you can see the array values in your browsers console window. Thanks :-)
-    }
-        </script>
 </html>
