--- a/templates/create_demand.html
+++ b/templates/create_demand.html
@@ -2,7 +2,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	{{bas}}
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -120,7 +119,7 @@
 	<div class="modal-content">
 		<div class="close">+</div>
 		{% csrf_token %}
-		<form name="itemform" id="radh" action='test' method="POST">
+		<form name="itemform" id="radh" action='' method="POST">
 			{% csrf_token %}
 			<div class="col-auto">
 				<div class="form-group">
