--- a/static/css/popup.css
+++ b/static/css/popup.css
@@ -4,6 +4,7 @@
     background-color: rgba(0,0,0,0.7);
     position: fixed;
     top: 0;
+    display: flex;
     justify-content: center;
     align-items: center;
     display: none;
