--- a/templates/create_demand.html
+++ b/templates/create_demand.html
@@ -69,7 +69,7 @@
 
 
 						<br>
-						<table class="test table table-sm">
+						<table class="test table table-sm" id="itemstab">
 							<thead>
 							<tr>
 								<th scope="col">Index</th>
@@ -82,9 +82,9 @@
 							<tbody class="detail">
 							<tr>
 								<td class="count"></td>
-								<td>{{ref}}</td>
-								<td>{{desig}}</td>
-								<td>{{qty}}</td>
+								<td></td>
+								<td></td>
+								<td></td>
 								<td><input type="button" class="btn btn-outline-primary" id="remove" value="Delete Row">
 								</td>
 							</tr>
@@ -94,7 +94,7 @@
 						<div class="row">
 							<div class="col text-right col-sm-6">
 								<button class="btn btn-success btn-icon-split btn-block" type="submit" value="Submit"
-								        style="width:30%">Edit
+								        style="width:30%">Confirm
 								</button>
 							</div>
 							<div class="col text-left col-sm-6">
@@ -118,35 +118,25 @@
 <div class="bg-modal">
 	<div class="modal-content">
 		<div class="close">+</div>
-		{% csrf_token %}
-		<form name="itemform" id="radh" action='' method="POST">
-			{% csrf_token %}
+		<form onsubmit="addingrow() ; return false;" name="itemform" id="radh" action='' >
 			<div class="col-auto">
 				<div class="form-group">
-
-
 					<label for="ref">Reference:</label>
-					<input class="form-control form-control-user" type="text" name="ref" id="ref">
-
-
+					<input class="form-control form-control-user" type="text" name="ref" id="ref" required>
 				</div>
 
 				<div class="form-group">
 					<label for="desig">Designation:</label>
-					<input class="form-control form-control-user" type="text" name="desig" id="desig">
+					<input class="form-control form-control-user" type="text" name="desig" id="desig" required>
 				</div>
 				<div class="col">
 					<label for="quantity">Quantity:</label>
-					{% csrf_token %}
-					<input class="form-control form-control-user" type="number" min="0" name="quantity"
-					       id="quantity">
+					<input class="form-control form-control-user" type="number" min="0" name="quantity" id="quantity" required>
 				</div>
 			</div>
 			<div class="form-group">
-				<button class="btn btn-success btn-icon-split " type="submit" value="Submit" id="addrow"
-				        style="width:30%">Add
-				</button>
-				<button class="btn btn-dark btn-icon-split " type="submit" value="Submit" style="width:30%">Cancel
+				<input class="btn btn-success btn-icon-split " type="submit" value="Add" id="addrow" style="width:30%"/>
+				<button class="btn btn-dark btn-icon-split " type="reset" value="Reset" style="width:30%">Cancel
 				</button>
 			</div>
 
@@ -163,7 +153,7 @@
 <!-- Custom scripts for all pages-->
 <script src="{% static 'js/sb-admin-2.min.js'%}"></script>
 <script src="{% static 'js/popupform.js'%}"></script>
-<script src="{% static 'js/dynamictable.js'%}"></script>
+<script src="{% static 'js/dynamtab.js'%}"></script>
 <script src="{% static 'js/notnullwarning.js'%}"></script>
 <script src="{% static 'https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js'%}"></script>
 
