--- a/templates/create_demand.html
+++ b/templates/create_demand.html
@@ -72,7 +72,7 @@
 						<table class="test table table-sm" id="itemstab">
 							<thead>
 							<tr>
-								<th scope="col">Index</th>
+								<th scope="col" >Index</th>
 								<th scope="col">Product ID</th>
 								<th scope="col">Designation</th>
 								<th scope="col">Quantity</th>
@@ -80,14 +80,6 @@
 							</tr>
 							</thead>
 							<tbody class="detail">
-							<tr>
-								<td class="count"></td>
-								<td></td>
-								<td></td>
-								<td></td>
-								<td><input type="button" class="btn btn-outline-primary" id="remove" value="Delete Row">
-								</td>
-							</tr>
 
 							</tbody>
 						</table>
@@ -136,7 +128,7 @@
 			</div>
 			<div class="form-group">
 				<input class="btn btn-success btn-icon-split " type="submit" value="Add" id="addrow" style="width:30%"/>
-				<button class="btn btn-dark btn-icon-split " type="reset" value="Reset" style="width:30%">Cancel
+				<button class="btn btn-dark btn-icon-split " type="reset" value="Reset" id="clear" style="width:30%">Cancel
 				</button>
 			</div>
 
