--- a/templates/create_chef_at.html
+++ b/templates/create_chef_at.html
@@ -98,7 +98,7 @@
 							<div class="modal-content">
 								<div class="close">+</div>
 								{% csrf_token %}
-								<form action='test1' method="POST" id="itemm">
+								<form action='' method="POST" id="itemm">
 									<div class="form-group row">
 										<div class="form-group row">
 											<div class="col-sm-6 mb-3 mb-sm-0">
