--- a/templates/create_demand.html
+++ b/templates/create_demand.html
@@ -116,21 +116,15 @@
 <div class="bg-modal">
 	<div class="modal-content">
 		<div class="close">+</div>
-		<form onsubmit="addingrow() ; return false;" name="itemform" id="radh" action=''>
+		<form  onsubmit="addingrow() ; return false;" name="itemform" id="radh" action='' method="post">
+			{% csrf_token %}
 			<div class="col-auto">
-				<div class="form-group">
-					<label for="ref">Reference:</label>
-					<input class="form-control form-control-user" type="text" name="ref" id="ref" required>
-				</div>
 
 				<div class="form-group">
-					<label for="desig">Designation:</label>
-					<input class="form-control form-control-user" type="text" name="desig" id="desig" required>
-				</div>
-				<div class="col">
-					<label for="quantity">Quantity:</label>
-					<input class="form-control form-control-user" type="number" min="0" name="quantity" id="quantity"
-					       required>
+					{% for field in form %}
+					<label>{{field.html_name}}</label>
+					{{field}}
+                    {% endfor %}
 				</div>
 			</div>
 			<div class="form-group">
@@ -155,7 +149,7 @@
 <script src="{% static 'js/popupform.js'%}"></script>
 <script src="{% static 'js/dynamtab.js'%}"></script>
 <!-- <script src="{% static 'js/notnullwarning.js'%}"></script> -->
-<script src="{% static 'https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js'%}"></script>
+<script src= 'https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js'></script>
 
 </body>
 
