--- a/static/css/popup.css
+++ b/static/css/popup.css
@@ -1,5 +1,5 @@
 .bg-modal {
-    width : 100%;
+    width : 70%;
     height : 100%;
     background-color: rgba(0,0,0,0.7);
     position: fixed;
@@ -8,9 +8,10 @@
     justify-content: center;
     align-items: center;
     display: none;
+    z-index: 1;
     }
     .modal-content {
-    width: 600px;
+    width: 700px;
     height: 400px;
     background-color: white;
     border-radius: 4px;
@@ -24,4 +25,7 @@
     right: 14px;
     font-size: 42px;
     transform: rotate(45deg);
+    }
+    .please{
+    display:inline;
     }
