--- a/templates/index.html
+++ b/templates/index.html
@@ -38,7 +38,7 @@
 
                     <img src="{% static 'img/undraw_logo.svg'%}" width="500" height="200" >
                 </div>
-0
+
             </a>
 
             <!-- Divider -->
@@ -71,8 +71,10 @@
                 <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">Manage MO:</h6>
+                        <a class="collapse-item" href="{% url 'view_mo' %}">View</a>
                         <a class="collapse-item" href="{% url 'create_dem' %}">Create</a>
                         <a class="collapse-item" href="{% url 'edit_dem' %}">Edit</a>
+
                     </div>
                 </div>
             </li>
