--- a/static/css/popup.css
+++ b/static/css/popup.css
@@ -1,5 +1,5 @@
 .bg-modal {
-    width : 70%;
+    width : 100%;
     height : 100%;
     background-color: rgba(0,0,0,0.7);
     position: fixed;
@@ -27,5 +27,8 @@
     transform: rotate(45deg);
     }
     .please{
-    display:inline;
+    text-align: left;
+    }
+    .well h5 {
+    margin-top:0px;
     }
